--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     margin-left: 10px;
     top: 10px;
     color: white;
-    /* font-size: 16px; */
+    font-size: 16px;
     height: 80%;
 }
 
