--- a/style.css
+++ b/style.css
@@ -71,16 +71,35 @@
     filter: brightness(80%);
 }
 
-@media (min-width: 350px) {
+@media only screen and (min-width: 500px) {
     body {
         background-color: blue;
     }
     .carousel-item {}
     .info__peli {
-        font-size: 8px;
+        font-size: 10px;
     }
     .carousel-control-prev,
     .carousel-control-next {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 499px) {
+    body {
+        background-color: rgb(9, 255, 0);
+    }
+    .carousel-item {}
+    .info__peli {
+        font-size: 6px;
+    }
+    .carousel-control-prev,
+    .carousel-control-next {
+        display: none;
+    }
+    .info__btn--ver {
+        margin-top: 15px;
+        margin-left: 10px;
+        padding: 5px;
     }
 }
